# MIRROR

./: README.md
DIVTON/: .gitignore  README.md
DIVTON/export_onnx/: gen_export_onnx.py  parsing_export_onnx.py  warp_export_onnx.py
DIVTON/export_onnx/models/: afwm.py  networks.py
DIVTON/export_onnx/models/parsing/: AugmentCE2P.py
DIVTON/export_onnx/models/parsing/utils/: criterion.py  schp.py
DIVTON/test/: test.py  test.sh  test_pairs.txt
DIVTON/test/checkpoints/: readme.txt
DIVTON/test/data/: aligned_dataset_test.py  custom_dataset_data_loader_test.py
DIVTON/test/models/: afwm.py  networks.py
DIVTON/test/models/parsing/: AugmentCE2P.py
DIVTON/test/models/parsing/modules/: bn.py
DIVTON/test/options/: base_options.py  test_options.py
DIVTON/test/scripts/: test.sh
DIVTON/train/: train_PBAFN_e2e.py  train_PBAFN_stage1.py  train_PFAFN_e2e.py  train_PFAFN_stage1.py
DIVTON/train/data/: aligned_dataset.py
DIVTON/train/models/: afwm.py  networks.py
DIVTON/train/models/parsing/: AugmentCE2P.py
DIVTON/train/models/parsing/utils/: miou.py
DIVTON/train/options/: base_options.py  train_options.py
DIVTON/train/scripts/: pb_e2e.sh  pb_s1.sh  pf_e2e_pascal.sh  pf_s1_pascal.sh
android_vto/: .gitignore  README.md  build.gradle  gradle.properties
android_vto/app/src/main/: AndroidManifest.xml
android_vto/app/src/main/cpp/: CMakeLists.txt  imageUtils.cpp  imageUtils.h  logs.h  modelInference.cpp  modelInference.h  modelUtils.cpp  modelUtils.h  models.cpp  models.h  nativeLib.cpp
android_vto/app/src/main/cpp/externlibs/onnxruntime-release/: AndroidManifest.xml
android_vto/app/src/main/java/ai/onnxruntime/example/virtualtryon/: MainActivity.kt
android_vto/app/src/main/java/ai/onnxruntime/example/virtualtryon/camerascreen/: CameraFragment.kt
android_vto/app/src/main/java/ai/onnxruntime/example/virtualtryon/core/: FileSource.kt  FileUtil.kt  ImageHandler.kt  ImageUtil.kt  InferenceService.kt  InferenceTask.kt  InferenceWorker.kt  Models.kt  VTO.kt  (+5 more)
android_vto/app/src/main/res/drawable/: ic_play_circle.xml  selector_camera_icon.xml  selector_results_icon.xml  selector_videos_icon.xml
android_vto/app/src/main/res/layout/: activity_main.xml  fragment_camera.xml  fragment_play_result.xml  fragment_play_video.xml  fragment_results.xml  fragment_videos.xml  video_thumbnail.xml
android_vto/app/src/main/res/menu/: bottom_nav.xml  popup_fitting.xml  popup_videos.xml
android_vto/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android_vto/app/src/main/res/navigation/: camera.xml  nav_graph.xml  results.xml  videos.xml
android_vto/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
android_vto/app/src/main/res/values-night/: themes.xml
android_vto/gradle/wrapper/: gradle-wrapper.properties
(+10 files in other folders)
